--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Projeto Git</title>
-    <meta name="description" content="cadastro kenzie">
+    <meta name="description" content="Projeto Git">
     <link rel="icon" href="https://kenzie.com.br/favicon.jpeg">
     <meta name="autor" content="Josilaine da Silva Brandão">
 </head>
 <body>
-    <h1>Título</h1>
+    <h1>Teste Git</h1>
+    
 </body>
 </html>
